# surfside-code-sample

./: .env.development  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  eslint.config.js  jest.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: CHECKPOINTS.md  PI_SETUP.md  REMOTE_GPU.md  WINDOWS_SETUP.md
postmanCollection/: Journal.postman.json
reference/: HANDOVER.md  generate.py  pixelize.py
scripts/: cull_seed.py  remote_gpu_setup.sh  sdxl_bakeoff.py  seed_style_set.py
src/: index.ts
src/application/errors/: ApplicationError.ts  EntityNotFound.ts  InvalidPayload.ts  index.ts
src/application/queries/: JournalReadRepository.ts  index.ts
src/application/useCases/: UseCase.ts  index.ts
src/application/useCases/command/: AnalyseEntryUseCase.ts  CreateJournalEntryUseCase.ts  index.ts
src/config/: AppConfig.ts
src/dev/: createTable.ts  index.ts  server.ts
src/di/: development.ts  index.ts
src/domain/: index.ts
src/domain/aggregates/: Aggregate.ts  Journal.ts  index.ts
src/domain/entities/: JournalEntry.ts
src/domain/errors/: DomainError.ts  EntityNotFound.ts  index.ts
src/domain/events/: Event.ts
src/domain/repositories/: JournalEntryRepository.ts  JournalRepository.ts  index.ts
src/domain/services/: JournalAnalysisService.ts  index.ts
src/domain/valueObjects/: JournalEntryAnalysis.ts  index.ts
src/infrastructure/errors/: InfrastructureError.ts  MultipleItemsFound.ts  index.ts
src/infrastructure/services/: index.ts
src/lambda/API/: ApiHandler.ts  CreateJournalEntryHandler.ts  GetJournalEntriesBetweenDatesHandler.ts  LambdaApiEvent.ts
src/spriteforge/: __init__.py  cli.py  color.py  curate.py  dataset.py  director.py  generate.py  isolate.py  kmeans.py  palette.py  pixelize.py  preview.py  refine.py  tiling.py  worker.py
src/spriteforge/animate/: __init__.py  frames.py  pipeline.py  procedural.py  selector.py  sheet.py  skeleton.py  skeleton_quadruped.py
tests/: conftest.py  test_animate_pipeline.py  test_cli.py  test_cli_palette.py  test_color.py  test_cull_seed.py  test_curate.py  test_dataset.py  test_director.py  test_generate.py  test_integration_tiny_sd.py  test_isolate.py  test_kmeans.py  test_palette.py  test_pixelize.py  test_preview.py  test_procedural.py  test_refine.py  test_selector.py  test_sheet.py  test_skeleton.py  test_skeleton_quadruped.py  test_tiling.py  test_worker.py  tools.py
(+14 files in other folders)
